--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,9 @@ body {
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.4;
-  font-weight: 100;
-  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  mix-blend-mode: difference;
+  font-weight: 300;
+  text-shadow: 1px 1px 3px rgba(255, 255, 255);
+  /* mix-blend-mode: difference; */
 }
 
 .hero .content .cta {
@@ -144,6 +144,12 @@ body {
   background-color: var(--primary);
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+.hero .content .cta:hover {
+  background-color: var(--bg);
+  color: #fff;
+  transition: 0.3s;
 }
 
 /* about section */
@@ -173,6 +179,7 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  border-radius: 20%;
 }
 
 .about .row .content {
@@ -183,6 +190,7 @@ body {
 .about .row .content h3 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
+  margin-top: 3rem;
 }
 
 .about .row .content p {
