--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body {
   margin-top: 1rem;
   line-height: 1.4;
   font-weight: 300;
-  text-shadow: 1px 1px 3px rgba(255, 255, 255);
+  text-shadow: 1px 1px 3px rgb(41, 38, 38);
   /* mix-blend-mode: difference; */
 }
 
@@ -180,6 +180,10 @@ body {
 .about .row .about-img img {
   width: 100%;
   border-radius: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .about .row .content {
@@ -195,9 +199,10 @@ body {
 
 .about .row .content p {
   margin-bottom: 0.8rem;
-  font-size: 1.4;
-  font-weight: 100;
+  font-size: 11px;
+  font-weight: 300;
   line-height: 1.6;
+  letter-spacing: 0.1rem;
 }
 
 /* menu section */
@@ -335,6 +340,9 @@ footer .credit a:hover{
   background-color: black;
   color: var(--primary);
 }
+
+
+
 /* media queries */
 
 /* laptop */
@@ -346,7 +354,7 @@ footer .credit a:hover{
 /* tablet */
 @media (max-width: 768px) {
   html {
-    font-size: 62.5%;
+    font-size: 50%;
   }
 
   #hamburger-menu {
@@ -382,6 +390,30 @@ footer .credit a:hover{
   .navbar .navbar-nav a:hover::after {
     transform: scaleX(0.2);
   }
+
+
+.hero .content h1 {
+  font-size: 2.5rem;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1;
+  max-width: 30rem;
+  margin-top: rem;
+}
+
+.hero .content h1 span {
+  color: var(--primary);
+}
+  .hero .content p {
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  margin-top: 60%;
+  font-weight: 300;
+  text-shadow: 1px 1px 3px rgb(41, 38, 38);
+  max-width: 33rem;
+  /* mix-blend-mode: difference; */
+}
 
   .about .row {
     flex-wrap: wrap;
